# joyfly-cpp

./: .gitignore  AUTHORS  Makefile.am  bootstrap  configure.ac  macenvironment.sh  reconfit.sh
joyfly-cpp.xcodeproj/: project.pbxproj
joyfly-cpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
joyfly-cpp.xcodeproj/project.xcworkspace/xcshareddata/: joyfly-cpp.xccheckout
joyfly-cpp.xcodeproj/project.xcworkspace/xcuserdata/esanbockd.xcuserdatad/: UserInterfaceState.xcuserstate
joyfly-cpp.xcodeproj/xcuserdata/esanbockd.xcuserdatad/xcschemes/: joyfly-cpp.xcscheme  xcschememanagement.plist
src/: Makefile.am  abstractchopper.cpp  abstractchopper.h  c-joy-fly-controller.cpp  c-joy-fly-controller.h  c-joy-fly-view.cpp  c-joy-fly-view.h  c-joy-test.cc  c-joy-test.h  c-terminal-view.cpp  c-terminal-view.h  choppercontrol.cpp  choppercontrol.h  controllerinputer.h  joyfly_cpp.pro  joyflycontroller.h  joyflyguicontroller.cpp  joyflyguicontroller.h  joyflyview.h  joystickexception.h  joystickinputer.cpp  joystickinputer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotwindow.cpp  plotwindow.h  plotwindow.ui  qtjoyflyview.cpp  qtjoyflyview.h  sdljoystick.cpp  sdljoystick.h  simulatedchopper.cpp  simulatedchopper.h  teensychopper.cpp  teensychopper.h  terminalview.cpp  terminalview.h  timeseries.h
