noinst_PROGRAMS = joyfly_cpp

joyfly_cpp_SOURCES = \
	main.cpp	\
	c-joy-test.h \
	c-joy-test.cc \
	choppercontrol.cpp \
	choppercontrol.h \
	c-joy-fly-controller.cpp \
	c-joy-fly-controller.h \
	c-joy-fly-view.cpp \
	c-joy-fly-view.h \
	c-terminal-view.cpp \
	c-terminal-view.h

joyfly_cpp_LDADD = \
	$(SDL_LIBS) \
	$(Serial_LIBS) \
    -lserial